tests/macros/plugin/filter.rs
fn main() {
    let q = requestty::questions![Plugin { filter: todo!() }];
}
